force-app/main/default/objects/ARF_Embroidery__c/ARF_Embroidery__c.object-meta.xml
<CustomObject>
    <label>ARF - Embroider</label>
    <nameField>
        <displayFormat>A{0}</displayFormat>
        <label>ARF - Embroidery  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ARF - Embroidery</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>