force-app/main/default/objects/ARF_Embroidery__c/fields/Color_of_Garment__c.field-meta.xml
<CustomField>
    <fullName>Color_of_Garment__c</fullName>
    <label>Color(s) of Garment</label>
    <type>TextArea</type>
</CustomField>