force-app/main/default/objects/ARF_Embroidery__c/fields/Embroidery_Summary__c.field-meta.xml
<CustomField>
    <fullName>Embroidery_Summary__c</fullName>
    <label>Embroidery Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>