force-app/main/default/objects/ARF_Embroidery__c/fields/Garment_Information__c.field-meta.xml
<CustomField>
    <fullName>Garment_Information__c</fullName>
    <description>Enter SKU</description>
    <label>Garment Information</label>
    <type>TextArea</type>
</CustomField>