force-app/main/default/objects/ARF_Embroidery__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>ARF - Embroidery</relationshipLabel>
    <relationshipName>ARF_Embroidery</relationshipName>
    <type>Lookup</type>
</CustomField>