force-app/main/default/objects/ARF_Embroidery__c/fields/Sticker_Size_Description__c.field-meta.xml
<CustomField>
    <fullName>Sticker_Size_Description__c</fullName>
    <label>Sticker Size/Description</label>
    <type>TextArea</type>
</CustomField>