force-app/main/default/objects/ARF_Embroidery__c/fields/Stitching_Color_s__c.field-meta.xml
<CustomField>
    <fullName>Stitching_Color_s__c</fullName>
    <label>Stitching Color(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>