force-app/main/default/objects/ARF_Embroidery__c/fields/Type_of_Art__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Art__c</fullName>
    <label>Type of Art</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Embroidery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>